--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@tabler/icons-react": "^3.34.1",
@@ -17,6 +18,7 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.9",
     "next": "15.4.3",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
